tests/parser/switch/invalid_duplicate_otherwise.m.out
In invalid_duplicate_otherwise.m, line 8
|   otherwise
|   ^^^^^^^^^ error: expected KEYWORD(end), found KEYWORD(otherwise) instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
